	  is now deprecated. See --help for further information.
	Check_disk now calls stat() on all filesystems to check. (Old: only the ones selected using -p) 
	  A meaningful error message (eg "Stale NFS Handle") is printed if stat fails.
	Check_disk's --help now prints some examples for the new features introduced in 1.4.8

1.4.9 4th June 2006
	Inclusion of contrib/check_cluster2 as check_cluster with some improvements
	New/improved -E/--skip-stderr and -S/--skip-stdout options for check_by_ssh
	check_snmp now supports Counter64
	Fix compilation of check_ldap, check_radius and check_pgsql
	check_load can optionally divide by number of cpus
	Fix check_time returning wrong OK when time is before the epoch on some arch
	Make check_http output more consistent
	Fix possible check_http segfaults when following HTTP redirects
	check_snmp don't warn anymore if something is printed on stderr
	Fix check_tcp segfault when multiple expect strings are given
	New option for check_tcp: -A/--all to test if all given expect strings match

1.4.8 11th April 2007
	Respects --without-world-permissions for setuid plugins
	check_disk extra options for regex matching of filesystems and grouping of filesystems
	for collective thresholds
	Better configure test for mysqlclient availability
	Various check_ntp fixes

1.4.7 29th March 2007
	check_procs uses /usr/ucb/ps if available - fixes pst3 problems on Solaris
	Fixed MKINSTALLDIRS problem in po/
	./configure now detects if possible to compile check_mysql
	Fixed broken HELO in check_smtp
	check_icmp now allows to set a minimum number of hosts required for successs (-m)
	check_icmp fix for *BSD when running for long time
	check_ping times out 1 second quicker if host is unreachable
	Root plugins installed with world executable
	check_sybase from contrib now maintained in NagiosExchange
	--with-nagios-user/group reinstated ./configure option
	New --without-world-permissions ./configure option

1.4.6 5th February 2007